# task_manager-open-env

./: .env.example  .gitignore  Dockerfile  README.md  app.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_agent.py  streamlit_app.py  tasks.py
